new method for auth added
